# sagesyn-lang

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish-vscode.yml  release.yml
crates/sag-cli/: Cargo.toml
crates/sag-cli/src/: main.rs
crates/sag-codegen/: Cargo.toml
crates/sag-codegen/src/: formatter.rs  go.rs  lib.rs  python.rs  typescript.rs
crates/sag-lexer/: Cargo.toml
crates/sag-lexer/src/: lib.rs  token.rs
crates/sag-lsp/: Cargo.toml
crates/sag-lsp/src/: main.rs  semantic_tokens.rs  symbols.rs
crates/sag-parser/: Cargo.toml
crates/sag-parser/src/: ast.rs  lib.rs
crates/sag-types/: Cargo.toml
crates/sag-types/src/: lib.rs
crates/ssag-cli/: Cargo.toml
crates/ssag-cli/src/: main.rs
crates/ssag-codegen/: Cargo.toml
crates/ssag-codegen/src/: lib.rs  typescript.rs
crates/ssag-lexer/: Cargo.toml
crates/ssag-lexer/src/: lib.rs  token.rs
crates/ssag-parser/: Cargo.toml
crates/ssag-parser/src/: ast.rs  lib.rs
crates/ssag-types/: Cargo.toml
crates/ssag-types/src/: lib.rs
docs/: SPEC-PROPOSAL.md
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: sag.tmLanguage.json
examples/: adk-agent.py  adk-agent.sag  basic-agent.ssag  match-example.sag  minimal-agent.py  minimal-agent.sag  minimal-agent.ts
