[workspace]
resolver = "2"
members = [
    "crates/ssag-lexer",
    "crates/ssag-parser",
    "crates/ssag-types",
    "crates/ssag-codegen",
    "crates/ssag-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sagesyn/sagesyn-lang"
authors = ["SageSyn <team@sagesyn.ai>"]

[workspace.dependencies]
# Lexer
logos = "0.14"

# Error handling
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Internal crates
ssag-lexer = { path = "crates/ssag-lexer" }
ssag-parser = { path = "crates/ssag-parser" }
ssag-types = { path = "crates/ssag-types" }
ssag-codegen = { path = "crates/ssag-codegen" }
