[workspace]
resolver = "2"
members = [
    "crates/sag-lexer",
    "crates/sag-parser",
    "crates/sag-types",
    "crates/sag-codegen",
    "crates/sag-cli",
    "crates/sag-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sagesyn/sagesyn-lang"
authors = ["SageSyn <team@sagesyn.ai>"]

[workspace.dependencies]
# Lexer
logos = "0.14"

# Error handling
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Internal crates
sag-lexer = { path = "crates/sag-lexer" }
sag-parser = { path = "crates/sag-parser" }
sag-types = { path = "crates/sag-types" }
sag-codegen = { path = "crates/sag-codegen" }
