[package]
name = "sag-cli"
description = "CLI for the Sage Agent Programming Language compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "sag"
path = "src/main.rs"

[dependencies]
sag-lexer.workspace = true
sag-parser.workspace = true
sag-types.workspace = true
sag-codegen.workspace = true
clap.workspace = true
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
