[package]
name = "sag-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Language Server Protocol implementation for Sage Agent Language"

[[bin]]
name = "sag-lsp"
path = "src/main.rs"

[dependencies]
# LSP
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }

# Internal crates
sag-lexer = { path = "../sag-lexer" }
sag-parser = { path = "../sag-parser" }
sag-types = { path = "../sag-types" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dashmap = "6.0"
ropey = "1.6"
once_cell = "1.19"
