[package]
name = "sag-types"
description = "Type checker for the Sage Agent Programming Language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sag-parser.workspace = true
thiserror.workspace = true
miette.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
