[package]
name = "ssag-cli"
description = "CLI for the SageSyn Agent Programming Language compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "sagesyn"
path = "src/main.rs"

[dependencies]
ssag-lexer.workspace = true
ssag-parser.workspace = true
ssag-types.workspace = true
ssag-codegen.workspace = true
clap.workspace = true
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
